--- a/labs/src/metrics.asciidoc
+++ b/labs/src/metrics.asciidoc
@@ -55,7 +55,7 @@ In the Context Dir textbox enter /apps/nodeatomic
 
 Scroll down to the *General* section. Set the 'Application Name' to 'events-app'. Set the 'Name' to 'nodeatomic'
 
-Scroll down to the *Resources* section. Select 'Deployment Config'
+Scroll down to the *Resources* section. Select 'Deployment Config'.
 
 Click Create. Leave the application building and switch back to Adminstrator viewpoint (by clicking on Developer at the top left and choosing Developer).
 
@@ -69,16 +69,163 @@ TIP: Events only exist on the system for an hour. You can pause the flow of even
 
 Note that the events show the build container being pulled, created, deployed and executed. 
 
-Now in the pulldown box at the top left of the events and set the resource to Build (build.openshift.io/v1). This will filter the events to only ones from that type of resource. The screen should now look like:
+Now in the pulldown box at the top left of the events set the resource to Build (build.openshift.io/v1). This will filter the events to only ones from that type of resource. The screen should now look like:
 
 image::events4.png[build events only]
 
-Now we are going to Chaos Monkey the application - click on Workloads/Deployment Configs. Select the nodeatomic DC by clicking on the name 'nodeatomic' in the list (there should only be one there).
+Now click in the pulldown box at the top left of the events. In the textbox where it says 'Select Resource' type 'pod'. From the selection in the pulldown choose 'Pod'. 
 
-In the Deployment Config Overview screen click on the YAML tab.
+Pause the event stream again.
 
-We are going to purposefully break the YAML to generate events showing the application is broken. Scroll down to the template section and find the spec definition (highlighted in the image below).
+Switch to your terminal app window (the command line interface described in the prerequisites). type the following (remembering to change eventsx to events(you number):
 
-image::events5.png[highlighted text]
+[source]
+----
+oc project eventsx
+oc get dc
+oc scale dc/nodeatomic --replicas=6
+----
+
+image::events5.png[manually scale]
+
+Switch back to the OpenShift UI. You should still be on the Events tab with the events stream paused. Hit the play icon at the top left of the event stream list. You will notice new events relating to the creation of the new Pods.
+
+The events are short lived and related entirely to the behaviour of the objects within your project, and any project you can see through the RBAC policies applied for you. 
+
+=== Metrics
+
+Metrics are the behavioural statistics for the Containers; each container in the system, within a Pod, generates a consistent stream of metrics that can be viewed and processed by the control plane. 
+
+.OpenShift Container Metrics
+****
+Each Pod outputs three streams of realtime metrics. These are:
+
+. *Memory Usage*
+
+The current memory consumption for the Pod in question. This can be limited by administrators on a Project basis. This is expressed in MiB by default.
+
+. *CPU Usage*
+
+The current CPU consumption for the Pod in question. This can be limited by asministrators on a Project basis. This is expressed in millicores by default.
+
+. *Filesystem*
+
+The current file access consumption. This is expressed in KiB by default.
+****
+
+In the Administration view click on Workloads/Pods. Select the topmost Pod and click on its name. The Pod Details tab will display the current metrics for the Pod. 
+
+image::events6.png[Example Pod metrics]
+
+Now click on Home/Projects. Click on the eventsx project (where x is your user number). Scroll down to the 'Utilization' tab. This shows graphs for the agregated metrics for *all* Pods running in the Project, along with network transfer in/out for the Project and Pod count.
+
+image::events7.png[Aggregated Pod metrics]
+
+As of writing the following examples are in tech preview. On the Utilization tab click directly on the Pod Count graph itself. This will take you to an expanded graph which is a realtime version of the metrics executed by a query. The query is displayed beneath the graph. If you watch the graph it will update periodically.
+
+Switch back to the terminal tab and enter:
+
+[source]
+----
+oc scale dc/nodeatomic --replicas=1
+----
+
+Switch back to OpenShift UI. After a small pause (the metrics are collected over time) the graph should drop to reflect the change in Pod count. 
+
+image::events8.png[pods scaled back]
+
+This Metric functionality is incrdibly powerful and is being further developed for later releases.
+
+=== Logging
+
+Logging is the output of the actual applications themselves. By default OpenShift logs all output of the Application. 
+
+.Handling Application Multiplicity in Logging
+****
+One of the major hurdles when crafting logging for a Container orchestration system is the non-uniqueness of the Application across the estate.
+
+Put simply, you can have one or more copies of the same Application running. In previous systems, such as virtualisation, each application was unique on the hosting mechanism. With Container orchestration this isn't the case.
+
+There was a stack called ELK - ElasticSearch, Logstash and Kibana. ElasticSearch provided the search mechanism which comprised of individual searchable 'documents' which encompassed each log. These were keyed by the Application name. Logstash would take the log from the Application, create the searchable component that was uniquely keyed by the Application name. and then users would apply searches using Kibana.
+
+In a Container orchestration system this wouldn't work as your *multiple* copies of the Application would generate records with the same Application name - imagine you had three copies of Application 'myapp' running and one was generating errors. You wouldn't be able to identify which one because all the logs would be indexed using 'myapp'.
+
+So for OpenShift a new stack was used - the EFK stack. This consists, again, of ElasticSearch for indexing the logs, Kibana for searching them but now uses Fluentd to obtain the logs. What Fluentd does that is different is that the indexable component now has keys based on OpenShift values - which node the application is running on, the Pod name, the Cluster name. This means you can now search and see which exact Pod is throwing the error.
+
+For example, if you had three Pods running 'myapp' you could search for any errors in named Pods, any informational messages from Pods on a given node and the like.
+****
+
+==== Examining Logs using the OCP UI
+
+Switch to the Developer view and then to the topology view. You should have one copy of the Application running (one Pod). Click on the Pod to show the DC tab on the right side of the page. Now click on Resources to list the Pods.
+
+On the Pod icon click the URL icon (top right). This will open another tab with the output of the Application in it. Switch back to the OpenShift interface and click on 'View Logs', situated to the right of the single Pod in the DC tab.
+
+This will present you with the Pod Details page and the log output for this Pod. Switch back to the Application tab, titled 'Node Atomic basic operations'.
+
+Add /log to the end of the URL and hit return. The page should change to a simple webpage that says 'Logged 20 messages....'
+
+Switch back to the OpenShift interface. The log will now have twenty log messages (count 0 to count 19) displayed.
+
+Click on Topology. Click on the Pod to bring up the DC tab. Click on Overview.
+
+We are going to scale the Application to two copies; click on the up arrow displayed next to the Pod indicator *once*. Click on Resources and make sure there are now two copies of the Application running.
+
+==== Examining logs using the oc command
+
+Switch to the Terminal tab. In the terminal tab type the following:
+
+[source]
+----
+oc get pods | grep Running
+----
+
+This will list two Pods running - these are your applications. They will have a name such as nodeatomic-1-xxxxx. 
+
+For each of the Pods type (replace the xxxxx for the five characters at the end of the Pod name):
+
+[source]
+----
+oc logs nodeatomic-1-xxxxx
+----
+
+If you repeat the command for both one of them will have the simple log, the other will have the output of the twenty messages.
+
+Return to the Application tab and change the end of the url from /log to /log?message=TEST
+
+Switch back to the Terminal tab and repeat the 'oc logs' command for both Pods again.
+
+TIP: One of the Pods will now have the message TEST shown. In all probabilities it will be the same one that displayed the twenty log messages - this is because the session in the browser 'sticky' connects to one Pod. 
+
+==== OpenShift Enterprise Logging
+
+The Cluster you are using for this lab is not enabled for Enterprise logging. If it was developer, depending on RBAC, can make ElasticSearch related searches over aggregated logs for applications. 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
